--- a/app/src/main/res/layout/activity_home_admin.xml
+++ b/app/src/main/res/layout/activity_home_admin.xml
@@ -121,6 +121,7 @@
                         android:layout_marginStart="@dimen/common_padding_min"
                         android:layout_marginEnd="@dimen/common_padding_min"
                         android:layout_marginBottom="@dimen/common_padding_min"
+                        android:onClick="registrarContacto"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/imgRegistroContacto"
