--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="common_padding_min">8dp</dimen>
     <dimen name="default_linear_registro">20dp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="common_padding_default">16dp</dimen>
+    <dimen name="common_padding_micro">4dp</dimen>
 </resources>
