--- a/app/src/main/res/layout/activity_usuarios_admins.xml
+++ b/app/src/main/res/layout/activity_usuarios_admins.xml
@@ -41,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/common_padding_default"
-        android:src="@drawable/ic_person"
+        android:src="@drawable/ic_person_add"
         app:tint="@color/colorPrimaryDark"
         app:rippleColor="@android:color/holo_blue_light"
         app:borderWidth="0dp"
