--- a/app/src/main/res/layout/activity_registar_contacto.xml
+++ b/app/src/main/res/layout/activity_registar_contacto.xml
@@ -22,6 +22,7 @@
             android:layout_height="?attr/actionBarSize">
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/registrarContactoBTN"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Registrar"
