--- a/app/src/main/res/layout/activity_usuarios_admins.xml
+++ b/app/src/main/res/layout/activity_usuarios_admins.xml
@@ -21,19 +21,34 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/actualizarBTN"
+                android:layout_width="55dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginEnd="@dimen/common_padding_min"
+                android:text=""
+                app:icon="@drawable/ic_autorenew"
+                style="@style/Widget.MaterialComponents.Button">
+
+            </com.google.android.material.button.MaterialButton>
+
+        </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="@dimen/common_padding_min"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:listitem="@layout/item_component"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
