--- a/app/src/main/res/layout/item_component.xml
+++ b/app/src/main/res/layout/item_component.xml
@@ -37,7 +37,7 @@
             android:textColor="@android:color/black"/>
 
         <TextView
-            android:id="@+id/tvComentario"
+            android:id="@+id/tvTipoAdmin"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textStyle="bold"
